kubernetes/apps/app-cluster/minecraft/rcon-web-admin/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rcon-web-admin
  namespace: minecraft
  annotations:
    external-dns.alpha.kubernetes.io/hostname: minecraft-admin.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Minecraft RCON console and administration"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - minecraft"
    gethomepage.dev/href: "https://minecraft-admin.krapulax.dev"
    gethomepage.dev/icon: "minecraft.png"
    gethomepage.dev/name: "Minecraft Admin"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - minecraft-admin.krapulax.dev
  rules:
    - backendRefs:
        - name: rcon-web-admin
          port: 80
