kubernetes/apps/app-cluster/minecraft/rcon-web-admin/config/websocket-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rcon-web-admin-websocket
  namespace: minecraft
  annotations:
    autokuma.io/enabled: "false"
    external-dns.alpha.kubernetes.io/hostname: minecraft-admin-ws.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "WebSocket transport for Minecraft Admin"
    gethomepage.dev/enabled: "false"
    gethomepage.dev/group: "App Cluster - minecraft"
    gethomepage.dev/href: "https://minecraft-admin-ws.krapulax.dev"
    gethomepage.dev/icon: "mdi-websocket"
    gethomepage.dev/name: "Minecraft Admin WebSocket"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - minecraft-admin-ws.krapulax.dev
  rules:
    - backendRefs:
        - name: rcon-web-admin
          port: 4327
